# data-structure-practice-c

./: .gitignore  CMakeLists.txt  README.md  array.c  array.h  main.c
src/array/: CMakeLists.txt  array.c  array.h
src/genutils/: CMakeLists.txt  debug.h  genutils.c  genutils.h
src/libs/: CMakeLists.txt
tst/array/: CMakeLists.txt  test_array.c
